<resources>
    <string name="app_name">Quiz Perfil de Investidor</string>

    <!-- Main Activity -->

    <string name="main_title">Descubra seu Perfil de Investidor</string>
    <string name="main_name_hint">Digite seu nome</string>
    <string name="main_start_btn">Iniciar Questionário</string>
    <string name="main_disclaimer">A metodologia utilizada neste teste foi adaptada do questionário criado pelo Banco Paulista, acessível pelo endereço https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>

    <!-- Quiz Activity & Fragments -->
    <string name="quiz_next_btn">Próxima</string>
    <string name="quiz_finish_btn">Finalizar</string>
    <!-- Question 1 -->
    <string name="quiz_q1">Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="quiz_q1_a1">Menos de 6 meses</string>
    <string name="quiz_q1_a2">Entre 6 meses e 1 ano</string>
    <string name="quiz_q1_a3">Entre 1 ano e 3 anos</string>
    <string name="quiz_q1_a4">Acima de 3 anos</string>
    <!-- Question 2 -->
    <string name="quiz_q2">Qual o objetivo desse investimento?</string>
    <string name="quiz_q2_a1">Preservação do capital para não perder valor ao longo do tempo, assumindo baixos riscos de perdas</string>
    <string name="quiz_q2_a2">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados</string>
    <string name="quiz_q2_a3">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="quiz_q2_a4">Obter no curto prazo retornos elevados e signicativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>
    <!-- Question 3 -->
    <string name="quiz_q3">Qual das alternativas melhor classica sua formação e experiência com o mercado financeiro?</string>
    <string name="quiz_q3_a1">Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="quiz_q3_a2">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro</string>
    <string name="quiz_q3_a3">Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro</string>
    <string name="quiz_q3_a4">Possuo formação acadêmica na área financeira ou pleno conhecimento do mercado financeiro</string>
    <!-- Question 4 -->
    <string name="quiz_q4">Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras?</string>
    <string name="quiz_q4_a1">No máximo 25%</string>
    <string name="quiz_q4_a2">Entre 25,01 e 50%</string>
    <string name="quiz_q4_a3">Acima de 50%</string>
    <!-- Question 5 -->
    <string name="quiz_q5">Caso as suas aplicações sofressem uma queda superior a 30%, o que você faria?</string>
    <string name="quiz_q5_a1">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="quiz_q5_a2">Manteria aplicação aguardando uma melhora do mercado</string>
    <string name="quiz_q5_a3">Aumentaria a aplicação para aproveitar as oportunidades do mercado</string>
    <!-- Question 6 -->
    <string name="quiz_q6">Como está distribuído o seu patrimônio?</string>
    <string name="quiz_q6_a1">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis</string>
    <string name="quiz_q6_a2">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="quiz_q6_a3">Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="quiz_q6_a4">Acima de 50% em renda variável</string>
    <!-- Question 7 -->
    <string name="quiz_q7">Em relação as aplicações e rendimentos, em qual dessas situações você se enquadra?</string>
    <string name="quiz_q7_a1">Conto com o rendimento dessas aplicações para complementar minha renda mensal</string>
    <string name="quiz_q7_a2">Eventualmente posso resgatar parte das aplicações para fazer frente aos meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e pretendo fazer aplicações regulares</string>
    <string name="quiz_q7_a3">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar novas aplicações</string>
    <string name="quiz_q7_a4">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer aplicações regulares</string>
    <!-- Question 8 -->
    <string name="quiz_q8">Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="quiz_q8_a1">Menos de 6 meses</string>
    <string name="quiz_q8_a2">Entre 6 meses e 1 ano</string>
    <string name="quiz_q8_a3">Entre 1 ano e 3 anos</string>
    <string name="quiz_q8_a4">Acima de 3 anos</string>
    <!-- Question 9 -->
    <string name="quiz_q9">Qual sua faixa de renda mensal média?</string>
    <string name="quiz_q9_a1">Até R$ 1.000</string>
    <string name="quiz_q9_a2">De R$ 1.001 até R$ 5.000</string>
    <string name="quiz_q9_a3">De R$ 5.001 até R$ 10.000</string>
    <string name="quiz_q9_a4">Acima de R$ 10.000</string>
    <!-- Question 10 -->
    <string name="quiz_q10">Qual o valor aproximado do seu patrimônio?</string>
    <string name="quiz_q10_a1">Até R$ 10.000</string>
    <string name="quiz_q10_a2">De R$ 10.001 até R$ 100.000</string>
    <string name="quiz_q10_a3">De R$ 100.001 até R$ 500.000</string>
    <string name="quiz_q10_a4">De R$ 500.001 até R$ 1.000.000</string>
    <string name="quiz_q10_a5">Acima de R$ 1.000.001</string>


    <!-- Result Activity -->
    <string name="result_name">Nome</string>
    <string name="result_txt">Seu perfil de investidor é:</string>
    <string name="result_r1">Conservador</string>
    <string name="result_r2">Moderado</string>
    <string name="result_r3">Arrojado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
