<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Q10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_q10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:text="@string/quiz_q10"
            android:textAlignment="textStart"
            android:textColor="#F9A826"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp">

            <RadioButton
                android:id="@+id/q10_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q10_a1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q10_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q10_a2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q10_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q10_a3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q10_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q10_a4"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q10_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q10_a5"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_q10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="#373533"
            android:text="@string/quiz_finish_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>