<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Q3" >

    <data>
        <variable
            name = "viewModel"
            type = "com.example.perfil_investidor.model.QuizViewModel" />
        <variable
            name = "Q3"
            type = "com.example.perfil_investidor.Q3" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:text="@string/quiz_q3"
            android:textAlignment="textStart"
            android:textColor="#F9A826"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp">

            <RadioButton
                android:id="@+id/q3_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q3_a1"
                android:checked="@{viewModel.q3.equals(0)}"
                android:onClick="@{() -> viewModel.q3Points(0)}"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q3_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q3_a2"
                android:checked="@{viewModel.q3.equals(1)}"
                android:onClick="@{() -> viewModel.q3Points(1)}"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q3_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/quiz_q3_a3"
                android:checked="@{viewModel.q3.equals(2)}"
                android:onClick="@{() -> viewModel.q3Points(2)}"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q3_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q3_a4"
                android:checked="@{viewModel.q3.equals(4)}"
                android:onClick="@{() -> viewModel.q3Points(4)}"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="#373533"
            android:onClick="@{() -> Q3.nextQuestion()}"
            android:text="@string/quiz_next_btn" />
    </LinearLayout>

</layout>