<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/investor" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgMain"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textColor="#F9A826"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/lblTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/main_name_hint"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#F9A826"
            android:text="@string/main_start_btn" />

        <TextView
            android:id="@+id/txtDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/main_disclaimer"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>